# smallphysics

./: CMakeLists.txt  README
source/: CMakeLists.txt
source/physics/: CMakeLists.txt  main.cpp
source/physics/api/: CMakeLists.txt  CollisionDetector.hpp  CollisionPoint.hpp  CollisionProperties.hpp  CollisionResult.cpp  CollisionResult.hpp  CollisionShape.hpp  Constraint.hpp  ConstraintSolver.hpp  Force.hpp  ForceField.hpp  ForceFieldApplicator.hpp  MotionIntegrator.hpp  PhysicalMotionState.hpp  PhysicalObject.hpp  PhysicalProperties.hpp  SimulationWorld.hpp  TimeStepper.hpp  World.hpp
source/physics/world/: CMakeLists.txt  DiscreteDynamicsWorld.cpp  DiscreteDynamicsWorld.hpp
